feat: sign-up api
